--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6613,3 +6613,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-25
+  taskId: 57963019
+  timeCreate: Wed Jan 10 03:49:23 2024
+  timeStart: Wed Jan 10 03:53:22 2024
+  timeFinish: Wed Jan 10 04:03:04 2024
+  timeWait: 3 mins
+  timeBuild: 9 mins
+  timeTotal: 13 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-173
+  taskId: 57964437
+  timeCreate: Wed Jan 10 04:34:29 2024
+  timeStart: Wed Jan 10 04:34:55 2024
+  timeFinish: Wed Jan 10 04:38:51 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
