--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -8071,3 +8071,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-16
+  taskId: 57963622
+  timeCreate: Wed Jan 10 04:02:34 2024
+  timeStart: Wed Jan 10 04:02:34 2024
+  timeFinish: Wed Jan 10 04:11:30 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-85
+  taskId: 57964524
+  timeCreate: Wed Jan 10 04:38:58 2024
+  timeStart: Wed Jan 10 04:39:39 2024
+  timeFinish: Wed Jan 10 04:43:17 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
