--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -8089,3 +8089,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-17
+  taskId: 57964782
+  timeCreate: Wed Jan 10 04:50:47 2024
+  timeStart: Wed Jan 10 04:55:39 2024
+  timeFinish: Wed Jan 10 05:04:28 2024
+  timeWait: 4 mins
+  timeBuild: 8 mins
+  timeTotal: 13 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-86
+  taskId: 57966523
+  timeCreate: Wed Jan 10 05:30:36 2024
+  timeStart: Wed Jan 10 05:46:01 2024
+  timeFinish: Wed Jan 10 05:50:29 2024
+  timeWait: 15 mins
+  timeBuild: 4 mins
+  timeTotal: 19 mins
