chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6649,3 +6649,21 @@
   timeWait: 12 mins
   timeBuild: 4 mins
   timeTotal: 16 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-50
+  taskId: 57972122
+  timeCreate: Wed Jan 10 07:55:25 2024
+  timeStart: Wed Jan 10 08:02:14 2024
+  timeFinish: Wed Jan 10 08:12:18 2024
+  timeWait: 6 mins
+  timeBuild: 10 mins
+  timeTotal: 16 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-175
+  taskId: 57973272
+  timeCreate: Wed Jan 10 08:19:01 2024
+  timeStart: Wed Jan 10 08:19:04 2024
+  timeFinish: Wed Jan 10 08:22:14 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
