--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -8143,3 +8143,30 @@
   timeWait: 66 mins
   timeBuild: 4 mins
   timeTotal: 70 mins
+- name: devspaces-server-rhel8
+  tag: 3.12-18
+  taskId: 58014510
+  timeCreate: Thu Jan 11 09:59:37 2024
+  timeStart: Thu Jan 11 12:02:54 2024
+  timeFinish: Thu Jan 11 12:16:07 2024
+  timeWait: 123 mins
+  timeBuild: 13 mins
+  timeTotal: 136 mins
+- name: devspaces-pluginregistry-rhel8
+  tag: 3.12-11
+  taskId: 58018190
+  timeCreate: Thu Jan 11 11:50:52 2024
+  timeStart: Thu Jan 11 13:13:08 2024
+  timeFinish: Thu Jan 11 14:00:58 2024
+  timeWait: 82 mins
+  timeBuild: 47 mins
+  timeTotal: 130 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-89
+  taskId: 58020553
+  timeCreate: Thu Jan 11 12:50:34 2024
+  timeStart: Thu Jan 11 14:26:23 2024
+  timeFinish: Thu Jan 11 14:30:40 2024
+  timeWait: 95 mins
+  timeBuild: 4 mins
+  timeTotal: 100 mins
