--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -6721,3 +6721,21 @@
   timeWait: 67 mins
   timeBuild: 4 mins
   timeTotal: 71 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.11-52
+  taskId: 58027127
+  timeCreate: Thu Jan 11 15:33:55 2024
+  timeStart: Thu Jan 11 16:52:50 2024
+  timeFinish: Thu Jan 11 17:03:21 2024
+  timeWait: 78 mins
+  timeBuild: 10 mins
+  timeTotal: 89 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-178
+  taskId: 58047071
+  timeCreate: Fri Jan 12 10:22:29 2024
+  timeStart: Fri Jan 12 11:58:28 2024
+  timeFinish: Fri Jan 12 12:03:12 2024
+  timeWait: 95 mins
+  timeBuild: 4 mins
+  timeTotal: 100 mins
