--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -8242,3 +8242,21 @@
   timeWait: 5 mins
   timeBuild: 3 mins
   timeTotal: 9 mins
+- name: devspaces-devfileregistry-rhel8
+  tag: 3.12-49
+  taskId: 58066463
+  timeCreate: Sat Jan 13 22:23:51 2024
+  timeStart: Sat Jan 13 22:23:53 2024
+  timeFinish: Sat Jan 13 22:32:28 2024
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-94
+  taskId: 58066543
+  timeCreate: Sat Jan 13 22:39:06 2024
+  timeStart: Sat Jan 13 22:39:23 2024
+  timeFinish: Sat Jan 13 22:43:03 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
