--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -8413,3 +8413,21 @@
   timeWait: 0 mins
   timeBuild: 4 mins
   timeTotal: 4 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.12-18
+  taskId: 58076527
+  timeCreate: Mon Jan 15 04:56:38 2024
+  timeStart: Mon Jan 15 05:13:30 2024
+  timeFinish: Mon Jan 15 05:51:43 2024
+  timeWait: 16 mins
+  timeBuild: 38 mins
+  timeTotal: 55 mins
+- name: devspaces-operator-bundle
+  tag: 3.12-100
+  taskId: 58077692
+  timeCreate: Mon Jan 15 06:00:51 2024
+  timeStart: Mon Jan 15 06:01:29 2024
+  timeFinish: Mon Jan 15 06:05:00 2024
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
